# databento-fast

./: .gitignore  AI_PROMPT.txt  CLONE_GUIDE.md  CMakeLists.txt  COMPLETE_SUCCESS.txt  CONTRIBUTING.md  DUAL_REPO_SETUP.md  FINAL_BUILD_REPORT.txt  LICENSE  MANIFEST.in  MIGRATION_SUCCESS.txt  PROJECT_COMPLETE.txt  PROJECT_SUMMARY.md  PUBLISH_COMMANDS.md  PYPI_PUBLISHED.txt  README.md  USAGE.md  build.sh  build_and_test.bat  install_python.sh  publish.sh  push_all.sh  pyproject.toml  requirements.txt  setup.py  test.sh  test_python_module.py  verify_project.sh
.github/workflows/: ci.yml
benchmarks/: benchmark_all.cpp
examples/: batch_processing.cpp  create_test_data.cpp  example_batch_processing.cpp  example_mbo_simple.cpp  example_ultra_fast.cpp  example_usage.cpp  example_usage.py  fastest_comparison.cpp  parallel_fast_loader.cpp  sample_data.dbn  simple_mbo_parsing.cpp  standalone_test.cpp  ultimate_fast.cpp  ultra_fast_parsing.cpp  ultra_fast_real_data.cpp
include/databento/: dbn.hpp  dbn_parser.hpp  parser.hpp
python/: bindings.cpp  databento_py.cpp  example_download_and_parse.py  example_python.py  minimal_example.py  simple_download_parse.py
src/: dbn_parser.cpp  parser.cpp
tests/: CMakeLists.txt  test_parser.cpp  test_python_bindings.py
