[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
    "cmake>=3.15"
]
build-backend = "setuptools.build_meta"

[project]
name = "databento-fast"
version = "1.0.0"
description = "Ultra-fast C++ library for parsing Databento DBN files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ramin Brfinezhadfeli"}
]
keywords = ["databento", "dbn", "parser", "c++", "high-performance", "market-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/rbarfinezhadfeli0/databento-fast"
"Bug Reports" = "https://github.com/rbarfinezhadfeli0/databento-fast/issues"
Source = "https://github.com/rbarfinezhadfeli0/databento-fast"
